<resources>
    <string name="app_name">"Workshop Inventory "</string>
    <string name="action_add">Add item</string>
    <string name="sales_records">Sales Records</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="item_name">Name</string>
    <string name="part_no">Part No.</string>
    <string name="reference_no">Reference No.</string>
    <string name="supplier_name">Supplier</string>
    <string name="publication_no">Publication No.</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="sell">Sell</string>
    <string name="update">Update</string>
    <string name="qty_available">Quantity Available</string>
    <string name="price_view">Price</string>

    <string-array name="supplier_array">

        <item>Raoof Depot</item>
        <item>John Stephen</item>
        <item>McCarthy Depot</item>
        <item>Power Electronics</item>

    </string-array>
</resources>
