<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Name_textview"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name" />

    <TextView
        style="@style/heading"

        android:id="@+id/partNo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/part_no" />
    <TextView
        style="@style/heading"

        android:id="@+id/refNo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_no" />
    <TextView
        style="@style/heading"

        android:id="@+id/pubNo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publication_no" />
    <TextView
        style="@style/heading"

        android:id="@+id/supplier_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier_name" />
    <TextView
        style="@style/heading"

        android:id="@+id/qty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />
    <TextView
        style="@style/heading"
        android:id="@+id/price_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />
    <TextView
        style="@style/heading"
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
