<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.hammad.workshopinventory.AddItems"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/layout_coordinator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/activity_add_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_items_toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ImageView
        android:id="@+id/item_imageview"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:clickable="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/item_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                style="@style/AlphabeticEditText"
                android:id="@+id/item_name_editText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/part_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <EditText
                style="@style/numericEditText"
            android:id="@+id/part_no_editText"
                android:layout_width="0dp"
                android:layout_weight="2"
            android:layout_height="wrap_content" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/reference_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ref_no_editText"
            style="@style/numericEditText"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/publication_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/pub_no_editText"
            style="@style/numericEditText"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/supplier_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/supplier_spinner"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/quantity"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/quantity_editText"
            android:layout_width="0dp"
            style="@style/numericEditText"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/price"
                android:layout_width="0dp"

                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <EditText
                style="@style/numericEditText"
                android:id="@+id/price_editText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            </LinearLayout>

    </LinearLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</ScrollView>